log
Fri Mar 18 14:26:15 UTC 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bba1ae8
Fri Mar 18 14:29:30 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 15/70
3cb79ff
Fri Mar 18 14:36:15 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|5
total_score: 15/70
17084d6
Fri Mar 18 14:50:37 UTC 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:49:11: error: ‘List {aka struct List}’ has no member named ‘cuurent’; did you mean ‘current’?
     list->cuurent =list->current->next;
           ^~~~~~~
           current
list.c:50:11: error: expected expression before ‘->’ token
     return->list->current->data;
           ^~
Compilation failed
644b2b5
Fri Mar 18 14:50:47 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:49:11: error: ‘List {aka struct List}’ has no member named ‘cuurent’; did you mean ‘current’?
     list->cuurent =list->current->next;
           ^~~~~~~
           current
Compilation failed
5c61f9e
Fri Mar 18 14:50:53 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
88ac92d
